v3.1.8
- Whitespace changes (tabs to spaces to make all files uniform)
- jsoncpp 0.10.6 Update
- code cleanup

v3.1.4
- Update to PVR API 5.7.0
- Stub IsEPGTagPlayable as not implemented
- Stub IsEPGTagRecordable as not implemented
- Stub GetEPGTagStreamProperties as not implemented

v3.1.3
- Update to PVR API 5.6.0 dependency
- Replace GetLiveStreamURL() with new API GetChannelStreamProperties()
- Stub new unused API GetRecordingStreamProperties()
- Fix channel change not working

v3.1.2
- Replace CStdString with std::string

v3.1.1
- Update to PVR addon API v5.5.0
- Implement GetLiveStreamURL
- Update to latest SiliconDust hdhomerun library

v3.1.0
- Update to PVR addon API v5.3.0

v3.0.7
- Remove of never used addon interface function

v3.0.6
- Update Debian package control
- PVR addon callback way changes

v3.0.5
- Removed old no more needed version functions

v3.0.4
- set dependency versions automatic during build
- removed never used kodi to addon functions
- build system fixes

v3.0.3
- Fixed issue where if Guide's Affiliate is empty the channel would become an Unknown Channel

v3.0.2
- Correct channel Number if back-end provided channel number is used

v3.0.0
- Initial Kodi v18 version

v2.4.2
- Updated language files from Transifex

v2.4.1
- Updated language files from Transifex

v2.4.0
- Cmake: rename find_package kodi to Kodi

v2.3.1
- Fix includes

v2.3.0
- Update to PVR addon API v5.2.0

v2.2.0
- Update to PVR addon API v5.1.0

v2.1.0
- Update to PVR addon API v5.0.0

v2.0.2
- Updated to PVR API v4.2.0
 
v2.0.1
- Updated language files from Transifex

v2.0.0
- Initial Kodi Krypton version.

v1.0.9
- Updated language files from Transifex

v1.0.8
- Updated language files from Transifex

v1.0.7
- kodi.guilib is mandatory, enforce it

v1.0.6
- Add needs_configuration to addon.xml

v1.0.5
- Fix coverity scan issues

v1.0.4
- Fix addon.xml

v1.0.3
- Added icon
- Added setting: Mark new show
- Added setting: Hide protected channels